dotnet/versioned_docs/version-1.15/api/class-request.mdx
---
id: class-request
title: "Request"
---
import Tabs from '@theme/Tabs';
import TabItem from '@theme/TabItem';

Whenever the page sends a request for a network resource the following sequence of events are emitted by [Page]:
* [event Page.Request](./api/class-page.mdx#page-event-request) emitted when the request is issued by the page.
* [event Page.Response](./api/class-page.mdx#page-event-response) emitted when/if the response status and headers are received for the request.
* [event Page.RequestFinished](./api/class-page.mdx#page-event-request-finished) emitted when the response body is downloaded and the request is complete.

If request fails at some point, then instead of `'requestfinished'` event (and possibly instead of 'response' event), the  [event Page.RequestFailed](./api/class-page.mdx#page-event-request-failed) event is emitted.

:::note
HTTP Error responses, such as 404 or 503, are still successful responses from HTTP standpoint, so request will complete with `'requestfinished'` event.
:::

If request gets a 'redirect' response, the request is successfully finished with the 'requestfinished' event, and a new request is  issued to a redirected url.


- [Request.AllHeadersAsync()](./api/class-request.mdx#request-all-headers)
- [Request.Failure](./api/class-request.mdx#request-failure)
- [Request.Frame](./api/class-request.mdx#request-frame)
- [Request.Headers](./api/class-request.mdx#request-headers)
- [Request.HeadersArrayAsync()](./api/class-request.mdx#request-headers-array)
- [Request.HeaderValueAsync(name)](./api/class-request.mdx#request-header-value)
- [Request.IsNavigationRequest](./api/class-request.mdx#request-is-navigation-request)
- [Request.Method](./api/class-request.mdx#request-method)
- [Request.PostData](./api/class-request.mdx#request-post-data)
- [Request.PostDataBuffer](./api/class-request.mdx#request-post-data-buffer)
- [Request.PostDataJSON](./api/class-request.mdx#request-post-data-json)
- [Request.RedirectedFrom](./api/class-request.mdx#request-redirected-from)
- [Request.RedirectedTo](./api/class-request.mdx#request-redirected-to)
- [Request.ResourceType](./api/class-request.mdx#request-resource-type)
- [Request.ResponseAsync()](./api/class-request.mdx#request-response)
- [Request.SizesAsync()](./api/class-request.mdx#request-sizes)
- [Request.Timing](./api/class-request.mdx#request-timing)
- [Request.Url](./api/class-request.mdx#request-url)

## Request.AllHeadersAsync() {#request-all-headers}
- returns:<a aria-hidden="true" tabindex="-1" class="list-anchor-link" id="request-all-headers-return"/> &#60;[IDictionary]<[string], [string]>&#62;<a href="#request-all-headers-return" class="list-anchor">#</a>

An object with all the request HTTP headers associated with this request. The header names are lower-cased.

## Request.Failure {#request-failure}
- returns:<a aria-hidden="true" tabindex="-1" class="list-anchor-link" id="request-failure-return"/> &#60;[string]?&#62;<a href="#request-failure-return" class="list-anchor">#</a>

The method returns `null` unless this request has failed, as reported by `requestfailed` event.

Example of logging of all the failed requests:

```csharp
page.RequestFailed += (_, request) =>
{
    Console.WriteLine(request.Failure);
};
```

## Request.Frame {#request-frame}
- returns:<a aria-hidden="true" tabindex="-1" class="list-anchor-link" id="request-frame-return"/> &#60;[Frame]&#62;<a href="#request-frame-return" class="list-anchor">#</a>

Returns the [Frame] that initiated this request.

## Request.HeaderValueAsync(name) {#request-header-value}
- `name`<a aria-hidden="true" tabindex="-1" class="list-anchor-link" id="request-header-value-option-name"/> &#60;[string]&#62; Name of the header.<a href="#request-header-value-option-name" class="list-anchor">#</a>
- returns:<a aria-hidden="true" tabindex="-1" class="list-anchor-link" id="request-header-value-return"/> &#60;[string]?&#62;<a href="#request-header-value-return" class="list-anchor">#</a>

Returns the value of the header matching the name. The name is case insensitive.

## Request.Headers {#request-headers}
- returns:<a aria-hidden="true" tabindex="-1" class="list-anchor-link" id="request-headers-return"/> &#60;[IDictionary]<[string], [string]>&#62;<a href="#request-headers-return" class="list-anchor">#</a>

**DEPRECATED** Incomplete list of headers as seen by the rendering engine. Use [Request.AllHeadersAsync()](./api/class-request.mdx#request-all-headers) instead.

## Request.HeadersArrayAsync() {#request-headers-array}
- returns:<a aria-hidden="true" tabindex="-1" class="list-anchor-link" id="request-headers-array-return"/> &#60;[IEnumerable]<`HttpHeader`>&#62;<a href="#request-headers-array-return" class="list-anchor">#</a>
  - `name` &#60;[string]&#62; Name of the header.
  - `value` &#60;[string]&#62; Value of the header.

An array with all the request HTTP headers associated with this request. Unlike [Request.AllHeadersAsync()](./api/class-request.mdx#request-all-headers), header names are NOT lower-cased. Headers with multiple entries, such as `Set-Cookie`, appear in the array multiple times.

## Request.IsNavigationRequest {#request-is-navigation-request}
- returns:<a aria-hidden="true" tabindex="-1" class="list-anchor-link" id="request-is-navigation-request-return"/> &#60;[bool]&#62;<a href="#request-is-navigation-request-return" class="list-anchor">#</a>

Whether this request is driving frame's navigation.

## Request.Method {#request-method}
- returns:<a aria-hidden="true" tabindex="-1" class="list-anchor-link" id="request-method-return"/> &#60;[string]&#62;<a href="#request-method-return" class="list-anchor">#</a>

Request's method (GET, POST, etc.)

## Request.PostData {#request-post-data}
- returns:<a aria-hidden="true" tabindex="-1" class="list-anchor-link" id="request-post-data-return"/> &#60;[string]?&#62;<a href="#request-post-data-return" class="list-anchor">#</a>

Request's post body, if any.

## Request.PostDataBuffer {#request-post-data-buffer}
- returns:<a aria-hidden="true" tabindex="-1" class="list-anchor-link" id="request-post-data-buffer-return"/> &#60;[byte]&#91;&#93;?&#62;<a href="#request-post-data-buffer-return" class="list-anchor">#</a>

Request's post body in a binary form, if any.

## Request.PostDataJSON {#request-post-data-json}
- returns:<a aria-hidden="true" tabindex="-1" class="list-anchor-link" id="request-post-data-json-return"/> &#60;[JsonElement]?&#62;<a href="#request-post-data-json-return" class="list-anchor">#</a>

Returns parsed request's body for `form-urlencoded` and JSON as a fallback if any.

When the response is `application/x-www-form-urlencoded` then a key/value object of the values will be returned. Otherwise it will be parsed as JSON.

## Request.RedirectedFrom {#request-redirected-from}
- returns:<a aria-hidden="true" tabindex="-1" class="list-anchor-link" id="request-redirected-from-return"/> &#60;[Request]?&#62;<a href="#request-redirected-from-return" class="list-anchor">#</a>

Request that was redirected by the server to this one, if any.

When the server responds with a redirect, Playwright creates a new [Request] object. The two requests are connected by `redirectedFrom()` and `redirectedTo()` methods. When multiple server redirects has happened, it is possible to construct the whole redirect chain by repeatedly calling `redirectedFrom()`.

For example, if the website `http://example.com` redirects to `https://example.com`:

```csharp
var response = await page.GotoAsync("http://www.microsoft.com");
Console.WriteLine(response.Request.RedirectedFrom?.Url); // http://www.microsoft.com
```

If the website `https://google.com` has no redirects:

```csharp
var response = await page.GotoAsync("https://www.google.com");
Console.WriteLine(response.Request.RedirectedFrom?.Url); // null
```

## Request.RedirectedTo {#request-redirected-to}
- returns:<a aria-hidden="true" tabindex="-1" class="list-anchor-link" id="request-redirected-to-return"/> &#60;[Request]?&#62;<a href="#request-redirected-to-return" class="list-anchor">#</a>

New request issued by the browser if the server responded with redirect.

This method is the opposite of [Request.RedirectedFrom](./api/class-request.mdx#request-redirected-from):

```csharp
Console.WriteLine(request.RedirectedFrom?.RedirectedTo == request); // True
```

## Request.ResourceType {#request-resource-type}
- returns:<a aria-hidden="true" tabindex="-1" class="list-anchor-link" id="request-resource-type-return"/> &#60;[string]&#62;<a href="#request-resource-type-return" class="list-anchor">#</a>

Contains the request's resource type as it was perceived by the rendering engine. ResourceType will be one of the following: `document`, `stylesheet`, `image`, `media`, `font`, `script`, `texttrack`, `xhr`, `fetch`, `eventsource`, `websocket`, `manifest`, `other`.

## Request.ResponseAsync() {#request-response}
- returns:<a aria-hidden="true" tabindex="-1" class="list-anchor-link" id="request-response-return"/> &#60;[Response]?&#62;<a href="#request-response-return" class="list-anchor">#</a>

Returns the matching [Response] object, or `null` if the response was not received due to error.

## Request.SizesAsync() {#request-sizes}
- returns:<a aria-hidden="true" tabindex="-1" class="list-anchor-link" id="request-sizes-return"/> &#60;Sizes&#62;<a href="#request-sizes-return" class="list-anchor">#</a>
  - `requestBodySize` &#60;[int]&#62; Size of the request body (POST data payload) in bytes. Set to 0 if there was no body.
  - `requestHeadersSize` &#60;[int]&#62; Total number of bytes from the start of the HTTP request message until (and including) the double CRLF before the body.
  - `responseBodySize` &#60;[int]&#62; Size of the received response body (encoded) in bytes.
  - `responseHeadersSize` &#60;[int]&#62; Total number of bytes from the start of the HTTP response message until (and including) the double CRLF before the body.

Returns resource size information for given request.

## Request.Timing {#request-timing}
- returns:<a aria-hidden="true" tabindex="-1" class="list-anchor-link" id="request-timing-return"/> &#60;Timing&#62;<a href="#request-timing-return" class="list-anchor">#</a>
  - `startTime` &#60;[double]&#62; Request start time in milliseconds elapsed since January 1, 1970 00:00:00 UTC
  - `domainLookupStart` &#60;[double]&#62; Time immediately before the browser starts the domain name lookup for the resource. The value is given in milliseconds relative to `startTime`, -1 if not available.
  - `domainLookupEnd` &#60;[double]&#62; Time immediately after the browser starts the domain name lookup for the resource. The value is given in milliseconds relative to `startTime`, -1 if not available.
  - `connectStart` &#60;[double]&#62; Time immediately before the user agent starts establishing the connection to the server to retrieve the resource. The value is given in milliseconds relative to `startTime`, -1 if not available.
  - `secureConnectionStart` &#60;[double]&#62; Time immediately before the browser starts the handshake process to secure the current connection. The value is given in milliseconds relative to `startTime`, -1 if not available.
  - `connectEnd` &#60;[double]&#62; Time immediately before the user agent starts establishing the connection to the server to retrieve the resource. The value is given in milliseconds relative to `startTime`, -1 if not available.
  - `requestStart` &#60;[double]&#62; Time immediately before the browser starts requesting the resource from the server, cache, or local resource. The value is given in milliseconds relative to `startTime`, -1 if not available.
  - `responseStart` &#60;[double]&#62; Time immediately after the browser starts requesting the resource from the server, cache, or local resource. The value is given in milliseconds relative to `startTime`, -1 if not available.
  - `responseEnd` &#60;[double]&#62; Time immediately after the browser receives the last byte of the resource or immediately before the transport connection is closed, whichever comes first. The value is given in milliseconds relative to `startTime`, -1 if not available.

Returns resource timing information for given request. Most of the timing values become available upon the response, `responseEnd` becomes available when request finishes. Find more information at [Resource Timing API](https://developer.mozilla.org/en-US/docs/Web/API/PerformanceResourceTiming).

```csharp
var request = await page.RunAndWaitForRequestFinishedAsync(async () =>
{
    await page.GotoAsync("https://www.microsoft.com");
});
Console.WriteLine(request.Timing.ResponseEnd);
```

## Request.Url {#request-url}
- returns:<a aria-hidden="true" tabindex="-1" class="list-anchor-link" id="request-url-return"/> &#60;[string]&#62;<a href="#request-url-return" class="list-anchor">#</a>

URL of the request.

[Accessibility]: ./api/class-accessibility.mdx "Accessibility"
[Browser]: ./api/class-browser.mdx "Browser"
[BrowserContext]: ./api/class-browsercontext.mdx "BrowserContext"
[BrowserType]: ./api/class-browsertype.mdx "BrowserType"
[ConsoleMessage]: ./api/class-consolemessage.mdx "ConsoleMessage"
[Dialog]: ./api/class-dialog.mdx "Dialog"
[Download]: ./api/class-download.mdx "Download"
[ElementHandle]: ./api/class-elementhandle.mdx "ElementHandle"
[FileChooser]: ./api/class-filechooser.mdx "FileChooser"
[Frame]: ./api/class-frame.mdx "Frame"
[JSHandle]: ./api/class-jshandle.mdx "JSHandle"
[Keyboard]: ./api/class-keyboard.mdx "Keyboard"
[Locator]: ./api/class-locator.mdx "Locator"
[Mouse]: ./api/class-mouse.mdx "Mouse"
[Page]: ./api/class-page.mdx "Page"
[Playwright]: ./api/class-playwright.mdx "Playwright"
[Request]: ./api/class-request.mdx "Request"
[Response]: ./api/class-response.mdx "Response"
[Route]: ./api/class-route.mdx "Route"
[Selectors]: ./api/class-selectors.mdx "Selectors"
[TimeoutError]: ./api/class-timeouterror.mdx "TimeoutError"
[Touchscreen]: ./api/class-touchscreen.mdx "Touchscreen"
[Tracing]: ./api/class-tracing.mdx "Tracing"
[Video]: ./api/class-video.mdx "Video"
[WebSocket]: ./api/class-websocket.mdx "WebSocket"
[WebSocketFrame]: ./api/class-websocketframe.mdx "WebSocketFrame"
[Worker]: ./api/class-worker.mdx "Worker"
[Element]: https://developer.mozilla.org/en-US/docs/Web/API/element "Element"
[EvaluationArgument]: ./core-concepts.mdx#evaluation-argument "EvaluationArgument"
[Promise]: https://developer.mozilla.org/en-US/docs/Web/JavaScript/Reference/Global_Objects/Promise "Promise"
[iterator]: https://developer.mozilla.org/en-US/docs/Web/JavaScript/Reference/Iteration_protocols "Iterator"
[origin]: https://developer.mozilla.org/en-US/docs/Glossary/Origin "Origin"
[selector]: https://developer.mozilla.org/en-US/docs/Web/CSS/CSS_Selectors "selector"
[Serializable]: https://developer.mozilla.org/en-US/docs/Web/JavaScript/Reference/Global_Objects/JSON/stringify#Description "Serializable"
[UIEvent.detail]: https://developer.mozilla.org/en-US/docs/Web/API/UIEvent/detail "UIEvent.detail"
[UnixTime]: https://en.wikipedia.org/wiki/Unix_time "Unix Time"
[xpath]: https://developer.mozilla.org/en-US/docs/Web/XPath "xpath"

[bool]: https://docs.microsoft.com/en-us/dotnet/api/system.boolean "bool"
[double]: https://docs.microsoft.com/en-us/dotnet/api/system.double "double"
[byte]: https://docs.microsoft.com/en-us/dotnet/api/system.byte "byte"
[int]: https://docs.microsoft.com/en-us/dotnet/api/system.int32 "int"
[void]: https://docs.microsoft.com/en-us/dotnet/csharp/language-reference/builtin-types/void "void"
[string]: https://docs.microsoft.com/en-us/dotnet/api/system.string "string"
[URL]: https://nodejs.org/api/url.html "URL"
[Regex]: https://docs.microsoft.com/en-us/dotnet/api/system.text.regularexpressions.regex "Regex"

[Action]: https://docs.microsoft.com/en-us/dotnet/api/system.action-1 "Action"
[Func]: https://docs.microsoft.com/en-us/dotnet/api/system.func-2 "Func"
[IEnumerable]: https://docs.microsoft.com/en-us/dotnet/api/system.collections.ienumerable "IEnumerable"
[IDictionary]: https://docs.microsoft.com/en-us/dotnet/api/system.collections.idictionary "IDictionary"
[Task]: https://docs.microsoft.com/en-us/dotnet/api/system.threading.tasks.task?view=net-5.0 "Task"
[IReadOnlyDictionary]: https://docs.microsoft.com/en-us/dotnet/api/system.collections.generic.ireadonlydictionary-2 "IReadOnlyDictionary"
[JsonElement]: https://docs.microsoft.com/en-us/dotnet/api/system.text.json.jsonelement "JsonElement"

[all available image tags]: https://mcr.microsoft.com/v2/playwright/tags/list "all available image tags"
[Docker Hub]: https://hub.docker.com/_/microsoft-playwright "Docker Hub"
[Dockerfile.focal]: https://github.com/microsoft/playwright/blob/master/utils/docker/Dockerfile.focal "Dockerfile.focal"
